added squash caserole image and description

--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/squash-caserole.html">Squash Caserole</a>
+    <img src="./images/squash-caserole-img.jpg">
+    <h2>Description</h2>
+    <p>
+        Cook squash and onion until tender. Drain. Add layers of squash, soup, and
+        cheese. Repeat topping with cheese. Sprinkle with bread crumbs and paprika.
+        Bake 20 minutes at 375.
+    </p>
+    
 </body>
 </html>
