added ingredients and instructions

--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
     <img src="./images/squash-caserole-img.jpg">
     <h2>Description</h2>
     <p>
-        Cook squash and onion until tender. Drain. Add layers of squash, soup, and
-        cheese. Repeat topping with cheese. Sprinkle with bread crumbs and paprika.
-        Bake 20 minutes at 375.
+        Tasty squash caserole with cheese and mushroom soup
+        for a delicious thanksgiving meal.
     </p>
-    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound squash</li>
+        <li>1 onion chopped</li>
+        <li>1 can cream of mushroom soup</li>
+        <li>1 cup mild cheddar cheese - grated</li>
+    </ul>
+    <ol>
+        <li>Cook squash and onion until tender.</li>
+        <li>Drain.</li>
+        <li>Add layers of squash, soup and cheese.</li>
+        <li>Repeat.</li>
+        <li>Top with bread crumbs.</li>
+        <li>Bake 20 minutes at 375.</li>
+    </ol>
 </body>
 </html>
