added instructions header

--- a/recipes/squash-caserole.html
+++ b/recipes/squash-caserole.html
@@ -11,6 +11,7 @@
     <li>1 can cream of mushroom soup</li>
     <li>1 cup mild cheddar cheese - grated</li>
 </ul>
+<h2>Instructions</h2>
 <ol>
     <li>Cook squash and onion until tender.</li>
     <li>Drain.</li>
