--- a/recipes/squash-caserole.html
+++ b/recipes/squash-caserole.html
@@ -1,23 +1,25 @@
-<h1>Squash Caserole</h1>
-<h2>Description</h2>
-<p>
-    Tasty squash caserole with cheese and mushroom soup
-    for a delicious thanksgiving meal.
-</p>
-<h2>Ingredients</h2>
-<ul>
-    <li>1 pound squash</li>
-    <li>1 onion chopped</li>
-    <li>1 can cream of mushroom soup</li>
-    <li>1 cup mild cheddar cheese - grated</li>
-</ul>
-<h2>Instructions</h2>
-<ol>
-    <li>Cook squash and onion until tender.</li>
-    <li>Drain.</li>
-    <li>Add layers of squash, soup and cheese.</li>
-    <li>Repeat.</li>
-    <li>Top with bread crumbs.</li>
-    <li>Bake 20 minutes at 375.</li>
-</ol>
-<a href="../index.html">Previous Page</a>
+<body>
+    <h1>Squash Caserole</h1>
+    <h2>Description</h2>
+    <p>
+        Tasty squash caserole with cheese and mushroom soup
+        for a delicious thanksgiving meal.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound squash</li>
+        <li>1 onion chopped</li>
+        <li>1 can cream of mushroom soup</li>
+        <li>1 cup mild cheddar cheese - grated</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Cook squash and onion until tender.</li>
+        <li>Drain.</li>
+        <li>Add layers of squash, soup and cheese.</li>
+        <li>Repeat.</li>
+        <li>Top with bread crumbs.</li>
+        <li>Bake 20 minutes at 375.</li>
+    </ol>
+    <a href="../index.html">Previous Page</a>
+</body>
