renamed webpage title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Nonna's Recipes</h1>
     <a href="./recipes/squash-caserole.html">Squash Caserole</a>
     <p></p>
     <img src="./images/squash-caserole-img.jpg" height="200" width="250">
