changed casserole spelling

--- a/recipes/squash-casserole.html
+++ b/recipes/squash-casserole.html
@@ -1,8 +1,8 @@
 <body>
-    <h1>Squash Caserole</h1>
+    <h1>Squash Casserole</h1>
     <h2>Description</h2>
     <p>
-        Tasty squash caserole with cheese and mushroom soup
+        Tasty squash casserole with cheese and mushroom soup
         for a delicious thanksgiving meal.
     </p>
     <h2>Ingredients</h2>
