--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Nonna's Recipes</h1>
-    <a href="./recipes/squash-caserole.html">Squash Caserole</a>
+    <a href="./recipes/squash-casserole.html">Squash Casserole</a>
     <p></p>
-    <img src="./images/squash-caserole-img.jpg" height="200" width="250">
+    <img src="./images/squash-casserole-img.jpg" height="200" width="250">
 </body>
 </html>
