adjusted squash-casserole image dimensions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Nonna's Recipes</h1>
     <a href="./recipes/squash-casserole.html">Squash Casserole</a>
     <p></p>
-    <img src="./images/squash-casserole-img.jpg" height="200" width="250">
+    <img src="./images/squash-casserole-img.jpg" height="auto" width="400">
 </body>
 </html>
